# bugsies

./: Dockerfile  README.md  pyproject.toml  requirements-dev.in  requirements-dev.txt  requirements.in  requirements.txt
.devcontainer/: devcontainer.json
.github/workflows/: build.yaml  ci-pull-request.yaml  ci-push.yaml  ci.yaml  lint-test.yaml  lint.yaml  requirements.yaml  test.yaml
bugsies/: main.py  models.py
bugsies/ecs/: transform.py
tests/: main_test.py
tests/ecs/: test_transform.py
